# EutherBreed

./: .gitignore  Cargo.toml  HANDOFF.md  LICENSE  PLAN.md  README.md
assets/: ART_DIRECTION.md
assets/campaigns/: prototype.ron
assets/concepts/: README.md
assets/levels/: lab_access_corridor.ron  prototype_quarantine_ward.ron  research_spine.ron  triage_vault.ron
assets/sprites/biomech/: README.md
assets/sprites/ui/: README.md
crates/abta_tools/: Cargo.toml
crates/abta_tools/src/: main.rs
crates/euther_game/: Cargo.toml
crates/euther_game/src/: components.rs  editor.rs  geometry.rs  main.rs  resources.rs  setup.rs  systems.rs
crates/euther_game/src/systems/: apothecary.rs  camera.rs  combat.rs  contamination.rs  map.rs  pickups.rs  progression.rs  save.rs  terminals.rs  transitions.rs  ui.rs
crates/game_core/: Cargo.toml
crates/game_core/src/: campaign.rs  collision.rs  level.rs  lib.rs  progression.rs  rules.rs  save.rs  state.rs  vitals.rs
research/: ABTA_NOTES.md  LAYOUT_GRAMMAR_REPORT.md  OPENBREED_DOOR_AND_MAP_NOTES.md  VISUAL_ASSET_REPORT.md
scripts/: build.sh  check.sh  headless-smoke.sh  release.sh  run-gl.sh  run.sh  save-smoke.sh
