[workspace]
members = [
    "crates/game_core",
    "crates/euther_game",
    "crates/abta_tools",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/NichlasEk/EutherBreed"

[workspace.dependencies]
bevy = "0.18.1"
glam = { version = "0.30.10", features = ["serde"] }
ron = "0.12.1"
serde = { version = "1.0.228", features = ["derive"] }
